--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@ APP MAIN CSS Styling | Portfolio Site
 */
 
 
-.App {
-  font-family: "Lato", sans-serif;
+html, body, .root, .App {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-size: 0.9em;
 }
