--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,87 @@
 /*
 JOSEPH P. PASAOA
-APP MAIN CSS Styling | Portfolio Site
+APP MAIN CSS | Portfolio Site
 */
 
 
-html, body, .root, .App {
+html, body, .root, .App, #grid-base {
   height: 100%;
   width: 100%;
+}
+
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-size: 0.9em;
+  font-family: 'Cabin', sans-serif;
+  font-size: 1.1em;
+
+  /* background-image: url("./assets/images/bg_code.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center; */
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+#grid-base {
+  display: grid;
+  grid-template-columns: 25% auto;
+  grid-template-rows: 1fr;
+  /* grid-template-rows: 130px auto; */
+}
+
+header {
+  grid-column: span 3;
+}
+
+/* h1 {
+  margin: 7vh 1vw 0.5vh 2vw;
+
+  font-family: 'Encode Sans', sans-serif;
+  font-size: 2.2em;
+
+  color: #fff;
+} */
+
+.navlist {
+  margin: 2px 6px 6px 2vw;
+}
+
+.navlist li {
+  margin-bottom: 11px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  font-family: 'Raleway', sans-serif;
+
+  color: #111;
+}
+
+.navlist li:hover {
+  box-shadow: 0px 2px 2px #000;
+}
+
+.stage {
+  background-color: #fff;
+  margin-right: 190px;
+  margin-bottom: 90px;
+  opacity: 0.7;
 }
