--- a/src/components/NameLogo.css
+++ b/src/components/NameLogo.css
@@ -8,7 +8,7 @@ NameLogo Component CSS | Portfolio Site
     margin: 7vh 1vw 0.5vh 2vw;
 
     font-family: 'Raleway', sans-serif;
-    font-size: 1.3em;
+    font-size: 2.5rem;
     text-transform: uppercase;
     letter-spacing: 0.3px;
 
@@ -20,8 +20,8 @@ NameLogo Component CSS | Portfolio Site
     margin: 0.5vh 1vw 0.5vh 2vw;
 
     font-family: 'Marcellus SC', serif;
-    font-weight: 500;
-    font-size: 0.75em;
+    font-weight: 600;
+    font-size: 1.4rem;
     letter-spacing: 0.3px;
 
     color: #000;
