--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -6,7 +6,7 @@ Sidebar CSS | Portfolio Site
 
 #sidebar {
     height: 100%;
-    background-image: linear-gradient(to bottom, #4bc5ffb0, #0d2c5a), url(/static/media/contemp-comp.c92948e4.jpg);
+    background-image: linear-gradient(to bottom, #4bc5ffb0, #0d2c5a), url(../assets/images/bgs/contemp-comp.jpg);
     background-size: cover;
     background-position: 27% center;
 }
