--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,41 @@ header {
   grid-column: span 3;
 }
 
+a.faicon:link, a.faicon:visited {
+  margin: 29px 11px 3px 0px;
+
+  color: #111;
+  transition: color .5s ease-in-out;
+}
+
+a.faicon__a--resume:link, a.faicon__a--resume:visited {
+  margin-left: 47px;
+}
+
+a.faicon:hover, a.faicon:active {
+  color: #fff;
+}
+
+.faicon__svg {
+  font-size: 3.3rem;
+}
+
+.faicon__description {
+  position: relative;
+  transition: color .8s ease-in;
+  height: 1.5rem;
+
+  color: transparent;
+  font-size: 1.5rem;
+  font-style: italic;
+  text-transform: lowercase;
+  font-weight: bold;
+}
+
 .navlist {
-  margin: 2px 6px 6px 2vw;
+  align-items: flex-end;
+  padding: 42px 3vw 3px 2vw;
+  width: 100%;
 }
 
 .navlist li {
@@ -61,12 +94,13 @@ header {
   font-size: 1.5rem;
   font-family: 'Raleway', sans-serif;
 
-  color: #111;
+  color: #fff;
 }
 
-.navlist li:hover {
+/* .navlist li:hover {
   box-shadow: 0px 2px 2px #000;
-}
+  opacity: 1;
+} */
 
 .stage {
   background-color: #fff;
