--- a/src/App.css
+++ b/src/App.css
@@ -47,10 +47,32 @@ body {
   grid-template-rows: 1fr;
 }
 
+.text__card {
+  width: 550px;
+  margin-top: 0px;
+  margin-right: 21px;
+  padding-right: 11px;
+  border-right: solid 6px #cd8a3ddb;
+  border-radius: 21px;
+}
+
+.text__card--home {
+  margin-top: 3px;
+}
+
 .text--copy {
   font-family: 'Raleway', sans-serif;
   font-size: 1.6rem;
   color: #fff;
+  line-height: 2.2rem;
+}
+
+.text--copy__paragraph {
+  margin-top: 16px;
+}
+
+.text--copy__paragraph:first-child {
+  margin-top: 0px;
 }
 
 .text--highlight {
@@ -134,28 +156,41 @@ a.navlist__link:link, a.navlist__link:visited {
 
   color: #fff;
 
-  transition: color .1s ease-in;
+  transition: color .1s ease-in, text-shadow .2s ease-in;
 }
 
 a.navlist__link:hover, a.navlist__link:active {
-  color: #04087d;
+  color: #1ea0d2;
+  ;
+}
+
+a.navlist__link.active {
+  color: #e66e18;
+  text-shadow: 0px 1px 1px #000;
 }
 
 .stage {
-  background-image: linear-gradient(180deg, rgba(53, 27, 27, 0.58) 56%, #1d100ad1 100%);
+  overflow-y: auto;
+  background-image: linear-gradient(180deg, rgba(53, 27, 27, 0.89) 56%, #1d100adb 100%);
+  /* background-image: linear-gradient(180deg, rgba(53, 27, 27, 0.58) 56%, #1d100ad1 100%); */
   /* background-image: linear-gradient(180deg, rgba(255,255,255,0.500437675070028) 56%, rgba(146,163,171,0.5032387955182073) 100%); */
 }
 
 .page {
-  padding: 143px 43px 43px 22px;
+  padding: 113px 43px 43px 3px;
+}
+
+.page__textbock {
+  padding: 3px 42px 3px 74px;
+  width: auto;
 }
 
 h4.greet {
   font-size: 3rem;
   font-weight: normal;
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Indie Flower', cursive;
 
-  color: #3f5ed0;
+  color: #1ea0d2;
 }
 
 h3.page__name {
