--- a/src/App.css
+++ b/src/App.css
@@ -178,6 +178,35 @@ a.navlist__link.active {
   /* background-image: linear-gradient(180deg, rgba(255,255,255,0.500437675070028) 56%, rgba(146,163,171,0.5032387955182073) 100%); */
 }
 
+/* PROJECTS STAGE */
+.stage--projects {
+  direction: rtl;
+}
+
+.stage--projects * {
+  direction: ltr;
+}
+
+.stage--projects::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #190b0bbf;
+}
+
+.stage--projects::-webkit-scrollbar
+{
+    width: 11px;
+    background-color: #f5f5f5;
+}
+
+.stage--projects::-webkit-scrollbar-thumb
+{
+  background-image: linear-gradient(45deg, #150101eb, #3c13138c);
+  border: 2px solid #555555;
+  border-radius: 5px;
+}
+/* END */
+
 .page {
   position: relative;
   padding: 113px 43px 43px 3px;
@@ -324,13 +353,28 @@ h4.project__subheadline:first-child {
 
 .page--projectspot {
   display: grid;
-  grid-template-rows: 1fr;
+  grid-template-rows: 44px 1fr;
   grid-template-columns: 400px 1fr;
 
   height: 100%;
   padding: 3px;
 }
 
+.page--projectspot {
+  background-image: linear-gradient(to bottom, #0b97ad47, #00414e54);
+}
+
+.projectspot__back {
+  display: block;
+  grid-column: span 2;
+  margin: auto;
+
+  font-size: 1.4rem;
+  text-decoration: none;
+  font-weight: bold;
+  color: #1ea0d2;
+}
+
 .page--projectspot .project__screencap {
-  margin: 4vh 3px 3px 4vw;
+  margin: 3px 3px 3px 4.5vw;
 }
