--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,7 @@ a.navlist__link.active {
 .stage--projects::-webkit-scrollbar-track
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     background-color: #190b0bbf;
 }
 
