--- a/src/oldApp.css
+++ b/src/oldApp.css
@@ -565,3 +565,64 @@ h4.project__subheadline:first-child {
   position: relative;
   left: 16px;
 }
+
+
+
+/* NAMEBOX */
+h1.namebox__name {
+  margin: 7vh 1vw 0.5vh 1.5vw;
+
+  font-family: 'Raleway', sans-serif;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+
+  color: #fff;
+  text-shadow: 0px 2px 2px #111;
+}
+
+h2.namebox__subname {
+  margin: 0.5vh 1vw 0.5vh 1.5vw;
+
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-size: 1.3rem;
+  text-transform: lowercase;
+
+  color: #000;
+}
+
+
+
+/* ICONSBAR */
+.network-icons {
+  margin-left: 2vw;
+}
+
+.network-icons img {
+  height: 24px;
+  margin-bottom: 6px;
+}
+
+
+
+/* SIDEBAR */
+.App {
+  background-image: url(../assets/images/bgs/contemp-comp-dered.jpg);
+  background-size: cover;
+  background-color: #fff;
+  background-position: left center;
+}
+
+.sidebar {
+  height: 100%;
+  background-image: linear-gradient(to bottom, #e69129b3, #5a070785);
+  /* background-image: linear-gradient(to bottom, #4bc5ffb0, #011d46); */
+  /* background-image: linear-gradient(to bottom, #b99556b0, #271a0287); */
+  /* background-image: linear-gradient(to bottom, #4bc5ffb0, #011d46), url(../assets/images/bgs/contemp-comp.jpg); */
+  /* background-image: linear-gradient(to bottom, #A38383b0, #5C3828), url(../assets/images/bgs/contemp-comp.jpg); */
+  /* background-image: linear-gradient(to bottom, #4bc5ffb0, #0d2c5a), url(../assets/images/bgs/contemp-comp.jpg); */
+  background-size: cover;
+  background-position: 27% center;
+
+  border-right: solid 1px #8e6666;
+}
